fix: breaking words for long bash commands to avoid horizontal scrolling

--- a/src/renderer/src/main.css
+++ b/src/renderer/src/main.css
@@ -36,6 +36,10 @@
     font-variation-settings: "MONO" 1;
     height: 100%;
   }
+
+  .break-words {
+    word-break: break-word;
+  }
 }
 
 :root {
